platform/gateway/cilium-httproute-argocd.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: gateway-api-system
  hostnames:
    - "argocd.production.k8s.evoteum.com"
  rules:
    - backendRefs:
        - name: argo-argocd-server
          port: 80
